syntax = "proto3";

package aiserver.v1;

option go_package = "cursor2api-go/proto";

// AiService is the Cursor AI service
service AiService {
  rpc StreamChat (ChatRequest) returns (stream ChatResponse);
}

// ChatRequest is the request message for StreamChat
message ChatRequest {
  repeated ChatMessage message = 2;      // System and user messages
  bytes unknown = 4;                     // Unknown, possibly empty bytes
  string paths = 5;                      // Local project path, e.g., /c:/Users/Test/.cursor-tutor
  ModelInfo model = 7;                   // Model information
  string trace_id = 9;                   // Trace ID, used for x-amzn-trace-id and x-request-id
  uint64 unknown1 = 13;                  // Unknown, possibly constant 0
  uint64 unknown2 = 14;                  // Unknown, possibly constant 0
  string conversation_id = 15;           // Conversation ID, UUID format
  uint64 unknown4 = 16;                  // Unknown, possibly constant 1
  uint64 unknown5 = 22;                  // Unknown, possibly constant 0
  uint64 unknown6 = 24;                  // Unknown, possibly constant 0
  uint64 unknown7 = 28;                  // Unknown, possibly constant 0
  uint64 unknown8 = 29;                  // Unknown, possibly constant 0
}

// ModelInfo contains model information
message ModelInfo {
  string model = 1;                      // Model name, e.g., claude-3.5-sonnet
  bytes unknown = 4;                     // Unknown, possibly empty bytes
}

// ChatMessage represents a single message
message ChatMessage {
  string message = 1;                    // Message content
  uint64 role = 2;                       // 1 = user, 2 = assistant/system
  string uuid = 13;                      // Message UUID for tracking
}

// ChatResponse is the response message
message ChatResponse {
  bytes data = 1;                        // Response data chunk
}

